RESOLVED FIXED106190
Data flow paths that carry non-numbers, non-undefined, non-null values should not cause subtractions and arithmetic additions (i.e. ++) to speculate double
https://bugs.webkit.org/show_bug.cgi?id=106190
Summary Data flow paths that carry non-numbers, non-undefined, non-null values should...
Filip Pizlo
Reported 2013-01-05 17:12:10 PST
Patch forthcoming.
Attachments
the patch (4.40 KB, patch)
2013-01-05 17:15 PST, Filip Pizlo
sam: review+
Filip Pizlo
Comment 1 2013-01-05 17:15:01 PST
Created attachment 181449 [details] the patch
Filip Pizlo
Comment 2 2013-01-05 19:01:53 PST
Note You need to log in before you can comment on or make changes to this bug.